# Django-Flask-FastAPI

./: main.py  pyproject.toml  test.db
FastAPI/Simple Instagram/: .gitignore  main.py  pyproject.toml  utils.py
FastAPI/Simple Instagram/app/: app.py  db.py  imagekit_manager.py  schemas.py  users_manager.py
FastAPI/introduction/: mian.py  pyproject.toml  test-commands.sh
